base/monitoring/prometheus-blackbox-exporter/networkpolicies/ingress-nginx-egress-blackbox-exporter.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-blackbox-exporter
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: prometheus-blackbox-exporter
            app.kubernetes.io/name: prometheus-blackbox-exporter
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9115"
              protocol: TCP
